--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -1,5 +1,4 @@
 # Find available port to run server on
-port=$(find_port localhost 7000 11000 )
+port=$(find_port ${host})
 
 echo "The hostname is: $host"
-echo "The port is: $port"
