--- a/view.html.erb
+++ b/view.html.erb
@@ -17,17 +17,9 @@
 
 Connection options:
 
-#### OOD Remote Desktop app
-1. Launch a Remote Desktop ("Interactive Apps" menu)
-2. From the Remote Desktop session, open a web browser to
-<input id="txt_cryosparc_url" value="http://<%= host %>:<%= port %>" class="form-control" type="text" readonly="readonly">
-<br>
-<button id="copy-cryosparc-url" class="btn btn-primary btn-sm float-right copy-btn" data-clipboard-action="copy" data-clipboard-target="#txt_cryosparc_url" data-original-title="Copy URL to Clipboard" title="Copy URL to Clipboard"><span class="fa fa-clipboard"></span> Copy URL to Clipboard</button>
-<br>
-
 #### Client web browser + SSH tunneling
 1. Use your local SSH client to establish an SSH tunnel to the GPU node running CryoSPARC with the following command (executed from Windows PowerShell/Command Prompt or MacOS/Linux terminal):  
-<input id="txt_ssh_command" value="ssh -NL <%= port %>:<%= host %>:<%= port %> <%= ENV['USER'] %>@your-cluster-login-node" class="form-control" type="text" readonly="readonly">
+<input id="txt_ssh_command" value="ssh -NL <%= port %>:<%= host %>:<%= port %> <%= ENV['USER'] %>@fox.educloud.no" class="form-control" type="text" readonly="readonly">
 <br>
 <button id="copy-ssh-command" class="btn btn-primary btn-sm float-right copy-btn" data-clipboard-action="copy" data-clipboard-target="#txt_ssh_command" data-original-title="Copy SSH Command to Clipboard" title="Copy SSH Command to Clipboard"><span class="fa fa-clipboard"></span> Copy SSH Command to Clipboard</button>
 <br>
@@ -37,10 +29,18 @@ Leave the `ssh` command running in the terminal window to keep the ssh tunnel es
 <br>
 2. Open <a href="http://localhost:<%= port %>" target="_blank">http&colon;//localhost:<%= port %></a> in your web browser 
 
+#### OOD Remote Desktop app
+1. Launch a Fox Desktop ("Interactive Apps" menu)
+2. From the Fox Desktop session, open a web browser to
+<input id="txt_cryosparc_url" value="http://<%= host %>:<%= port %>" class="form-control" type="text" readonly="readonly">
+<br>
+<button id="copy-cryosparc-url" class="btn btn-primary btn-sm float-right copy-btn" data-clipboard-action="copy" data-clipboard-target="#txt_cryosparc_url" data-original-title="Copy URL to Clipboard" title="Copy URL to Clipboard"><span class="fa fa-clipboard"></span> Copy URL to Clipboard</button>
+<br>
+
 ---
 After connecting via one of the above methods, at the CryoSPARC login screen enter:  
 
-**user:** _<%= ENV['USER'] %>@fas.rc_  
+**user:** _<%= ENV['USER'] %>@educloud.no_  
 **password:** _(password entered in the previous form)_  
 
 You may not be prompted to log in if you have previously authenticated and the session is still cached in your browser.  
