Add link on how to obtain CryoSPARC license

--- a/form.yml.erb
+++ b/form.yml.erb
@@ -55,7 +55,7 @@ attributes:
     label: "CryoSPARC license ID"
     required: true
     help: |
-      Enter a password to use for this CryoSPARC session. Your CryoSPARC user name will be your Educloud user name.
+      Paste your license ID here to get started. Please get your own license ID free of charge for non-profit academic use from <a href="https://cryosparc.com/download" target="_blank">here</a>.
 
   cryosparc_user_password:
     label: "CryoSPARC password"
