Reference the correct stop button

--- a/view.html.erb
+++ b/view.html.erb
@@ -47,5 +47,5 @@ You may not be prompted to log in if you have previously authenticated and the s
 
 ---
 
-**To stop CryoSPARC** click the red "Delete" button in the top-right corner of this interactive session entry.
+**To stop CryoSPARC** click the red "Cancel" button in the top-right corner of this interactive session entry.
 CryoSPARC will also be automatically stopped if the above **Time Remaining** reaches 0 minutes.
