Remove line break

--- a/view.html.erb
+++ b/view.html.erb
@@ -29,8 +29,7 @@ After connecting using one of the methods below, you will reach the CryoSPARC lo
 ### Connection options
 
 #### Client web browser + SSH tunneling
-1. Use your local SSH client to establish an SSH tunnel to the GPU node running CryoSPARC with the following command (executed from Windows PowerShell/Command Prompt or Ma
-cOS/Linux terminal):
+1. Use your local SSH client to establish an SSH tunnel to the GPU node running CryoSPARC with the following command (executed from Windows PowerShell/Command Prompt or Ma cOS/Linux terminal):
 <input id="txt_ssh_command" value="ssh -NL <%= port %>:<%= host %>:<%= port %> <%= ENV['USER'] %>@fox.educloud.no" class="form-control" type="text" readonly="readonly">
 <br>
 <button id="copy-ssh-command" class="btn btn-primary btn-sm float-right copy-btn" data-clipboard-action="copy" data-clipboard-target="#txt_ssh_command" data-original-title
